--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,15 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://root:gdwWyhKEuHsRLckSoaytJmlSgkUVBNBd@mysql.railway.internal:3306/railway
+    url: jdbc:mysql://localhost:3306/students?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Ho_Chi_Minh
     username: root
-    password: gdwWyhKEuHsRLckSoaytJmlSgkUVBNBd 
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      connection-timeout: 60000
+      connection-timeout: 30000
       maximum-pool-size: 10
       minimum-idle: 5
-  
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -24,7 +24,7 @@ spring:
           batch_size: 10
         order_inserts: true
         order_updates: true
-  
+
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
