--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,18 @@
 server:
-  port: 8080
+  port: ${PORT:8080}  # Railway dùng biến PORT
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/students?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Ho_Chi_Minh
-    username: root
-    password: 123456
+    # Sử dụng biến từ Railway
+    url: jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:railway}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+    username: ${MYSQLUSER:root}
+    password: ${MYSQLPASSWORD:password}
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      connection-timeout: 30000
+      connection-timeout: 60000
       maximum-pool-size: 10
       minimum-idle: 5
-
+  
   jpa:
     hibernate:
       ddl-auto: update
@@ -24,7 +25,7 @@ spring:
           batch_size: 10
         order_inserts: true
         order_updates: true
-
+  
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
